--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -15,11 +15,24 @@ spec:
       labels:
         app: wallabag
     spec:
-      # Se elimina el securityContext para permitir que el contenedor se ejecute como root.
-      # Esta es la clave para que funcione.
+      # 1. El initContainer se ejecuta como root (por defecto) y arregla los permisos.
+      initContainers:
+        - name: set-permissions
+          image: busybox:1.36
+          command: ["sh", "-c", "chown -R 1000:1000 /data && chown -R 1000:1000 /images"]
+          volumeMounts:
+            - name: data
+              mountPath: /data
+            - name: images
+              mountPath: /images
+      
+      # 2. El contenedor principal se ejecuta de forma segura como usuario 1000.
       containers:
         - name: wallabag
           image: ghcr.io/wallabag/docker:2.6.10
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
           ports:
             - containerPort: 80
           env:
