fix(wallabag): set definitive working deployment

--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -15,14 +15,9 @@ spec:
       labels:
         app: wallabag
     spec:
-      securityContext:
-        fsGroup: 1000
       containers:
         - name: wallabag
           image: ghcr.io/wallabag/docker:2.6.10
-          command: ["/bin/sh", "-c"]
-          args:
-            - "chown -R 1000:1000 /var/www/wallabag && exec /entrypoint.sh wallabag"
           ports:
             - containerPort: 80
           env:
@@ -58,8 +53,8 @@ spec:
               memory: "256Mi"
               cpu: "150m"
             limits:
-              memory: "1.5Gi"
-              cpu: "1500m"
+              memory: "768Mi"
+              cpu: "1000m"
       volumes:
         - name: data
           persistentVolumeClaim:
