--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -15,15 +15,31 @@ spec:
       labels:
         app: wallabag
     spec:
-      # La clave: fsGroup asegura que el volumen sea escribible por el grupo correcto.
-      securityContext:
-        fsGroup: 1000
+      # 1. El initContainer se ejecuta como root y prepara los volúmenes.
+      initContainers:
+        - name: set-permissions
+          image: busybox:1.36
+          # 2. No solo cambiamos el propietario, sino que forzamos los permisos de escritura.
+          command:
+            - "/bin/sh"
+            - "-c"
+            - |
+              chown -R 1000:1000 /data /images
+              chmod -R 775 /data /images
+          volumeMounts:
+            - name: data
+              mountPath: /data
+            - name: images
+              mountPath: /images
+      
+      # 3. El contenedor principal se ejecuta de forma segura como usuario 1000.
       containers:
         - name: wallabag
-          # Volvemos a la imagen original que estabas usando.
           image: ghcr.io/wallabag/docker:2.6.10
-          # El comando de inicio que necesita la imagen para no detenerse.
-          # No necesita 'chown' porque fsGroup se encarga de los permisos del volumen.
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
+          # 4. Usamos el comando de inicio correcto.
           command: ["/entrypoint.sh", "wallabag"]
           ports:
             - containerPort: 80
