--- a/cluster/apps/omnivore/deployments.yaml
+++ b/cluster/apps/omnivore/deployments.yaml
@@ -13,6 +13,16 @@ spec:
       labels:
         app: postgres
     spec:
+      initContainers:
+        - name: set-permissions
+          image: busybox:1.36
+          command: ["sh", "-c", "chown -R 70:70 /var/lib/postgresql/data"]
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
+      securityContext:
+        runAsUser: 70
+        fsGroup: 70
       containers:
         - name: postgres
           image: postgres:15-alpine
@@ -101,7 +111,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: bjw-s/omnivore-api:2024-07-28 # Using a community-maintained image
+          image: ghcr.io/omnivore-app/api:latest
           env:
             - name: DATABASE_URL
               value: "postgres://omnivore:$(POSTGRES_PASSWORD)@postgres:5432/omnivore"
@@ -116,7 +126,7 @@ spec:
                   name: omnivore-secrets
                   key: POSTGRES_PASSWORD
           ports:
-            - containerPort: 4000
+            - containerPort: 8080 
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -135,12 +145,12 @@ spec:
     spec:
       containers:
         - name: web
-          image: bjw-s/omnivore-web:2024-07-28
+          image: ghcr.io/omnivore-app/web:latest
           env:
             - name: NEXT_PUBLIC_API_URL
-              value: "http://api:4000/api/graphql"
+              value: "http://api:8080/api/graphql" 
           ports:
-            - containerPort: 3000
+            - containerPort: 8080 
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -159,7 +169,7 @@ spec:
     spec:
       containers:
         - name: content-fetch
-          image: bjw-s/omnivore-content-fetch:2024-07-28
+          image: ghcr.io/omnivore-app/content-fetch:latest
           env:
             - name: DATABASE_URL
               value: "postgres://omnivore:$(POSTGRES_PASSWORD)@postgres:5432/omnivore"
