--- a/cluster/apps/readeck/pvc.yaml
+++ b/cluster/apps/readeck/pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: smb-dynamic
+  storageClassName: smb-readeck-db
   resources:
     requests:
       storage: 5Gi
