--- a/cluster/base/kustomization.yaml
+++ b/cluster/base/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - ./smb-storageclass-strict.yaml
   - ./smb-storageclass-adguard.yaml
   - ./smb-storageclass-postgres.yaml
+  - ./smb-storageclass-readeck.yaml
