--- a/cluster/apps/readeck/deployments.yaml
+++ b/cluster/apps/readeck/deployments.yaml
@@ -51,6 +51,10 @@ spec:
       labels:
         app: readeck
     spec:
+      initContainers:
+        - name: wait-for-db
+          image: busybox:1.36
+          command: ['sh', '-c', 'until nc -zv postgres.readeck.svc.cluster.local 5432; do echo "Waiting for database..."; sleep 2; done']    
       containers:
         - name: readeck
           image: codeberg.org/readeck/readeck:latest
