--- a/cluster/apps/readeck/deployments.yaml
+++ b/cluster/apps/readeck/deployments.yaml
@@ -28,6 +28,11 @@ spec:
                   key: POSTGRES_PASSWORD
           ports:
             - containerPort: 5432
+          readinessProbe:
+            tcpSocket:
+              port: 5432
+            initialDelaySeconds: 5
+            periodSeconds: 10
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
@@ -54,7 +59,7 @@ spec:
       initContainers:
         - name: wait-for-db
           image: busybox:1.36
-          command: ['sh', '-c', 'until nc -zv postgres.readeck.svc.cluster.local 5432; do echo "Waiting for database..."; sleep 2; done']    
+          command: ['sh', '-c', 'until nc -zv postgres.readeck.svc.cluster.local 5432; do echo "Waiting for database..."; sleep 2; done']
       containers:
         - name: readeck
           image: codeberg.org/readeck/readeck:latest
