--- a/cluster/apps/readeck/kustomization.yaml
+++ b/cluster/apps/readeck/kustomization.yaml
@@ -2,10 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - postgres-pvc.yaml
+  - postgres-helm.yaml
   - readeck-pvc.yaml
-  - postgres-deployment.yaml
-  - postgres-service.yaml
   - readeck-deployment.yaml
   - readeck-service.yaml
   - readeck-ingress.yaml
