--- a/cluster/apps/readeck/readeck-deployment.yaml
+++ b/cluster/apps/readeck/readeck-deployment.yaml
@@ -18,13 +18,13 @@ spec:
         app: readeck
     spec:
       initContainers:
-        - name: wait-for-postgres
+        - name: wait-for-db
           image: busybox:1.36
           command: 
             - /bin/sh
             - -c
             - |
-              until nc -zv readeck-postgres 5432; do
+              until nc -zv readeck-postgres-postgresql.readeck.svc.cluster.local 5432; do
                 echo "Waiting for PostgreSQL to be ready..."
                 sleep 2
               done
@@ -46,7 +46,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: readeck-secrets
-                  key: database-url
+                  key: database-url-helm
             - name: READECK_LOG_LEVEL
               value: "info"
             - name: TZ
