--- a/cluster/sources/weave-gitops.yaml
+++ b/cluster/sources/weave-gitops.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://charts.dev.wkp.weave.works
+  url: https://helm.gitops.weave.works
