--- a/cluster/apps/argo-apps/homepage-app.yaml
+++ b/cluster/apps/argo-apps/homepage-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'ssh://git@github.com/foalaniz/homelab-k3s.git' 
-    targetRevision: main 
+    targetRevision: argo-experiment 
     path: cluster/apps/homepage 
   destination:
     server: 'https://kubernetes.default.svc'
