Fix: Folder-argo app RepoURL

--- a/cluster/apps/argo-apps/pgadmin-app.yaml
+++ b/cluster/apps/argo-apps/pgadmin-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'ssh://git@github.com/foalaniz/homelab-k3s.git' 
+    repoURL: 'https://github.com/foalaniz/homelab-k3s.git' 
     targetRevision: argo-experiment 
     path: cluster/apps/pgadmin
   destination:
