--- a/cluster/apps/argo-apps/root-app.yaml
+++ b/cluster/apps/argo-apps/root-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'ssh://git@github.com/foalaniz/homelab-k3s.git' 
+    repoURL: 'https://github.com/foalaniz/homelab-k3s.git' 
     targetRevision: argo-experiment
     path: cluster/apps/argo-apps 
   destination:
