Add: media-stack to ArgoCD

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - ./traefik-install.yaml
 
   # Aplicaciones que dependen de las bases
-  - ./networking-adguard.yaml
-  - ./media.yaml
+  #- ./networking-adguard.yaml
+  #- ./media.yaml
   - ./database.yaml
   - ./monitoring.yaml
   #- ./homepage.yaml
