--- a/cluster/apps/argo-apps/media-stack.yaml
+++ b/cluster/apps/argo-apps/media-stack.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: commafeed
+  name: media-stack
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
-    targetRevision: argo-experiment 
-    path: cluster/apps/commafeed
+    targetRevision: argo-experiment
+    path: cluster/apps/media-stack 
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: commafeed
+    namespace: media-stack
   syncPolicy:
     automated:
       prune: true
