--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Instalaciones base con dependencias
-  - ./metallb-install.yaml
-  - ./metallb-config.yaml
-  - ./traefik-install.yaml
+  #- ./metallb-install.yaml
+  #- ./metallb-config.yaml
+  #- ./traefik-install.yaml
 
   # Aplicaciones que dependen de las bases
   #- ./networking-adguard.yaml
