feat(argo): Point applications to main branch

--- a/cluster/apps/argo-apps/media-stack-app.yaml
+++ b/cluster/apps/argo-apps/media-stack-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
-    targetRevision: argo-experiment
+    targetRevision: main
     path: cluster/apps/media-stack 
   destination:
     server: 'https://kubernetes.default.svc'
