--- a/cluster/apps/argo-apps/base-app.yaml
+++ b/cluster/apps/argo-apps/base-app.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
-    targetRevision: argo-experiment
+    targetRevision: main
     path: cluster/base 
   destination:
     server: 'https://kubernetes.default.svc'
