--- a/cluster/apps/argo-apps/metallb-install-app.yaml
+++ b/cluster/apps/argo-apps/metallb-install-app.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
-    targetRevision: argo-experiment 
+    targetRevision: main
     path: cluster/apps/metallb/install
   destination:
     server: 'https://kubernetes.default.svc'
