--- a/cluster/apps/argo-apps/media-stack-app.yaml
+++ b/cluster/apps/argo-apps/media-stack-app.yaml
@@ -3,12 +3,14 @@ kind: Application
 metadata:
   name: media-stack
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
     targetRevision: main
-    path: cluster/apps/media-stack 
+    path: cluster/apps/media-stack
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: media-stack
