--- a/cluster/apps/argo-apps/metallb-config-app.yaml
+++ b/cluster/apps/argo-apps/metallb-config-app.yaml
@@ -1,19 +1,20 @@
+# cluster/apps/argo-apps/metallb-config-app.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: base
+  name: metallb-config
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "-20"
+    argocd.argoproj.io/sync-wave: "-9"
 spec:
   project: default
   source:
     repoURL: 'https://github.com/foalaniz/homelab-k3s.git'
     targetRevision: main
-    path: cluster/base
+    path: cluster/apps/metallb/config
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: kube-system
+    namespace: metallb-system
   syncPolicy:
     automated:
       prune: true
