--- a/cluster/apps/argo-apps/smb-csi-driver-app.yaml
+++ b/cluster/apps/argo-apps/smb-csi-driver-app.yaml
@@ -1,23 +1,23 @@
-# cluster/apps/argo-apps/metallb-app.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb
+  name: smb-csi-driver
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "-10"
+    argocd.argoproj.io/sync-wave: "-20"
 spec:
   project: default
   source:
-    repoURL: 'https://metallb.github.io/metallb'
-    chart: metallb
-    targetRevision: '0.14.7'
+    repoURL: 'https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts'
+    chart: csi-driver-smb
+    targetRevision: 'v1.9.0'
     helm:
-      valueFiles:
-        - $values/cluster/apps/metallb/config/ip-pool.yaml
+      values: |
+        controller:
+          replicas: 1
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: metallb-system
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: true
