--- a/cluster/apps/readeck/kustomization.yaml
+++ b/cluster/apps/readeck/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - postgres-helm.yaml
+  #- postgres-helm.yaml
   - readeck-pvc.yaml
   - readeck-deployment.yaml
   - readeck-service.yaml
