--- a/cluster/apps/readeck/readeck-deployment.yaml
+++ b/cluster/apps/readeck/readeck-deployment.yaml
@@ -18,17 +18,7 @@ spec:
         app: readeck
     spec:
       initContainers:
-        - name: wait-for-db
-          image: busybox:1.36
-          command: 
-            - /bin/sh
-            - -c
-            - |
-              until nc -zv readeck-postgres-postgresql.readeck.svc.cluster.local 5432; do
-                echo "Waiting for PostgreSQL to be ready..."
-                sleep 2
-              done
-              echo "PostgreSQL is ready!"
+      # ... (sin cambios)
       containers:
         - name: readeck
           image: codeberg.org/readeck/readeck:0.14.0
@@ -43,10 +33,17 @@ spec:
             - name: READECK_DATABASE_DRIVER
               value: "postgres"
             - name: READECK_DATABASE_SOURCE
+              value: "postgres://$(DB_USERNAME):$(DB_PASSWORD)@readeck-postgres-postgresql.readeck.svc.cluster.local:5432/readeck?sslmode=disable"
+            - name: DB_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: readeck-secrets
-                  key: database-url-helm
+                  key: DB_USERNAME
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: readeck-secrets
+                  key: postgres-password
             - name: READECK_LOG_LEVEL
               value: "info"
             - name: TZ
