--- a/cluster/apps/readeck/readeck-deployment.yaml
+++ b/cluster/apps/readeck/readeck-deployment.yaml
@@ -17,6 +17,10 @@ spec:
       labels:
         app: readeck
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       initContainers:
         - name: wait-for-db
           image: busybox:1.36
@@ -32,35 +36,21 @@ spec:
       containers:
         - name: readeck
           image: codeberg.org/readeck/readeck:0.14.0
-          # Añadimos un 'command' para usar un shell
-          command: ["/bin/sh", "-c"]
-          args:
-            # El shell construye la variable y luego ejecuta la aplicación
-            - |
-              export READECK_DATABASE_SOURCE="postgres://${DB_USERNAME}:${DB_PASSWORD}@readeck-postgres-postgresql.readeck.svc.cluster.local:5432/readeck?sslmode=disable"
-              /readeck
           ports:
             - containerPort: 8000
               name: http
           env:
-            # Estas variables ahora son leídas por el shell
-            - name: DB_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: readeck-secrets
-                  key: postgres-password
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: readeck-secrets
-                  key: postgres-password
-            # Variables de entorno originales de la aplicación
             - name: READECK_SERVER_HOST
               value: "0.0.0.0"
             - name: READECK_SERVER_PORT
               value: "8000"
             - name: READECK_DATABASE_DRIVER
               value: "postgres"
+            - name: READECK_DATABASE_SOURCE
+              valueFrom:
+                secretKeyRef:
+                  name: readeck-secrets
+                  key: database-url-helm
             - name: READECK_LOG_LEVEL
               value: "info"
             - name: TZ
