--- a/cluster/apps/readeck/readeck-deployment.yaml
+++ b/cluster/apps/readeck/readeck-deployment.yaml
@@ -23,29 +23,37 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
       initContainers:
+        # Este contenedor no cambia, espera por el secreto
         - name: wait-for-secret
           image: bitnami/kubectl:latest
           command:
             - /bin/sh
             - -c
             - |
-              # Wait for the secret that the Helm chart creates
               until kubectl get secret readeck-postgres-postgresql -n readeck >/dev/null 2>&1; do
                 echo "Waiting for secret 'readeck-postgres-postgresql' to be created..."
                 sleep 2
               done
               echo "Secret 'readeck-postgres-postgresql' found!"
+        # ESTE ES EL CONTENEDOR MEJORADO
         - name: wait-for-db
-          image: busybox:1.36
-          command: 
+          image: docker.io/bitnami/postgresql:16.3.0-debian-12-r21 # Usamos una imagen que tiene pg_isready
+          env:
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: readeck-postgres-postgresql
+                  key: postgres-password
+          command:
             - /bin/sh
             - -c
             - |
-              until nc -zv readeck-postgres-postgresql.readeck.svc.cluster.local 5432; do
-                echo "Waiting for PostgreSQL to be ready..."
-                sleep 2
+              export PGPASSWORD="$POSTGRES_PASSWORD"
+              until pg_isready -h readeck-postgres-postgresql.readeck.svc.cluster.local -U readeck -d readeck -p 5432; do
+                echo "Waiting for PostgreSQL to be truly ready..."
+                sleep 5
               done
-              echo "PostgreSQL is ready!"
+              echo "PostgreSQL is ready to accept connections!"
       containers:
         - name: readeck
           image: codeberg.org/readeck/readeck:0.14.0
@@ -62,9 +70,7 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  # Use the secret created by the Helm chart
                   name: readeck-postgres-postgresql
-                  # The chart stores the user password in this key
                   key: postgres-password
             - name: READECK_DATABASE_SOURCE
               value: "postgres://readeck:$(POSTGRES_PASSWORD)@readeck-postgres-postgresql.readeck.svc.cluster.local:5432/readeck?sslmode=disable"
