fix(readeck): Add RBAC for secret access in initContainer

--- a/cluster/apps/readeck/readeck-deployment.yaml
+++ b/cluster/apps/readeck/readeck-deployment.yaml
@@ -18,12 +18,12 @@ spec:
       labels:
         app: readeck
     spec:
+      serviceAccountName: readeck 
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
       initContainers:
-        # Este contenedor no cambia, espera por el secreto
         - name: wait-for-secret
           image: bitnami/kubectl:latest
           command:
@@ -35,9 +35,8 @@ spec:
                 sleep 2
               done
               echo "Secret 'readeck-postgres-postgresql' found!"
-        # ESTE ES EL CONTENEDOR MEJORADO
         - name: wait-for-db
-          image: docker.io/bitnami/postgresql:16.3.0-debian-12-r21 # Usamos una imagen que tiene pg_isready
+          image: docker.io/bitnami/postgresql:16.3.0-debian-12-r21
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
