--- a/cluster/apps/readeck/kustomization.yaml
+++ b/cluster/apps/readeck/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  #- postgres-helm.yaml
+  - rbac.yaml
   - readeck-pvc.yaml
   - readeck-deployment.yaml
   - readeck-service.yaml
   - readeck-ingress.yaml
+  
